# WaylandQtPointerConstraints-mirror

./: CMakeLists.txt  ConfinePointer.cpp  ConfinePointer.h  LockPointer.cpp  generate-protocols.sh
examples/: ConfinedButton.cpp  LockingButton.cpp
include/WaylandQtPointerConstraints/: ConfinePointer.h  LockPointer.h
src/: ConfinePointer.cpp  LockPointer.cpp
